# HI

./: CMakeLists.txt  CMakePresets.json  README.md
Include/SA/Collections/: HI
Include/SA/HI/: Interface.hpp  InterfaceList.hpp  InterfaceList.inl  Object.hpp  PolymorphicContainer.hpp
Source/SA/HI/: Interface.cpp  Object.cpp
Tests/Prototype/: CMakeLists.txt  main.cpp
Tests/UnitTests/: CMakeLists.txt  InterfaceTests.cpp
